--- a/package.json
+++ b/package.json
@@ -2,30 +2,52 @@
   "name": "meetopia-app",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "esbuild": "^0.25.5"
+  },
   "scripts": {
+    "dev": "concurrently \"npm run dev:next\" \"npm run dev:server\"",
     "dev:next": "next dev",
     "dev:server": "cd server && npm run dev",
-    "dev": "concurrently \"npm run dev:next\" \"npm run dev:server\"",
     "build": "next build",
     "start": "next start",
     "signal": "cd server && npm start",
     "signal:dev": "cd server && npm run dev",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "seed": "node prisma/seed.mjs",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:test": "curl http://localhost:3000/api/db-test"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "@prisma/client": "^5.8.0",
+    "@sentry/integrations": "^7.114.0",
+    "@sentry/nextjs": "^9.24.0",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.7",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.44.1",
     "emoji-picker-react": "^4.6.0",
+    "esbuild": "^0.25.5",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.0.4",
+    "next": "^15.3.3",
     "next-auth": "^4.24.5",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
@@ -37,6 +59,9 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/connect": "^3.4.38",
@@ -46,6 +71,7 @@
     "@types/express": "^5.0.0",
     "@types/express-serve-static-core": "^5.0.6",
     "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mime": "^3.0.4",
     "@types/node": "^22.13.10",
@@ -59,6 +85,8 @@
     "@types/serve-static": "^1.15.7",
     "@types/socket.io": "^3.0.1",
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "prisma": "^5.8.0",
     "ts-node": "^10.9.2"
   },
